--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   </head>
   <body ng-controller="TextController">
     <h2>{{text}}</h2>
+    <form ng-controller="StartupController" class="" action="index.html" method="post">
 
-
-
-
-
-
+        Today (Actual): <input ng-change="computeDaily()" ng-model="funding.dailycount"type="text" name="" value="">
+        <br>
+        <br>
+        This Month: <input ng-change="computeMonthly()" ng-model="funding.monthlycount"type="text" name="" value="">
+        <p>Based on today:<br>
+          Predicted payment: {{funding.dailyaftertax | currency: "$ "}}</p>
+        <p>Based on month:<br>
+          Predicted payment: {{funding.monthlyaftertax | currency: "$ "}}
+        </p>
+    </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
