--- a/index.html
+++ b/index.html
@@ -1,185 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="roi">
-  <head>
-    <meta charset="utf-8">
-    <title>ROI Calculator</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body ng-controller="TextController">
-    <div class="container">
-    <div ng-controller="CalcCtrl as calc">
-      <h1 class="text-center">ROI Calculator</h1>
+<html ng-app="calcApp">
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+</head>
 
-      <!-- Revenue start -->
-      <div class="row text-center form-group">
-        <div class="col-md-12">
-          {{Revenue results go here}}
+<body>
+    <h2>Todo</h2>
+    <div id="app-container" ng-controller="CalcCtrl">
+        <span>{{remaining()}} of {{items.length}} remaining</span>
+        [ <a href="" ng-click="delete()">Delete</a> ]
+        <ul class="unstyled">
+            <li ng-repeat="item in items">
+                <input type="checkbox" ng-model="item.done">
+                <span class="done-{{item.done}}">{{item.text}}</span>,
+                <span class="done-{{item.done}}">{{item.once | currency}}</span>,                      <span class="done-{{item.done}}">{{item.monthly | currency}}</span>
+            </li>
+        </ul>
+        <form ng-submit="addItem()">
+            <input type="text" ng-model="itemText" size="30"
+                placeholder="add new item here">
+           <input type="text" ng-model="itemOne" size="30"
+                placeholder="add one-time amount">
+           <input type="text" ng-model="itemMonthly" size="30"
+                placeholder="add monthly amount">
+            <input class="btn-primary" type="submit" value="Add Revenue Item">
+      </form>
+
+      <div>
+        <h2>Revenue</h2>
+        <div>
+          <span >One-Time: {{items | sumOfValue:'once'}}</span>
+          <p>Monthly: {{item.revTotalMonth | currency}}</p>
+          <p>Total: {{item.revTotal | currency}}</p>
         </div>
-      </div>
 
-      <div class="row text-center form-group">
-        <div class="col-md-12">
-          <label for="itemName">Item Name</label>
-          <input type="text" name="" value="">
-
-          <label for="oneTime">One Time</label>
-          <input type="text" name="" value="">
-
-          <label for="monthly">Monthly</label>
-          <input type="text" name="" value="">
-
-          <button type="button" name="button" class="btn btn-primary">Add Revenue Item</button>
-        </div>
-      </div> <!-- Revenue end -->
-
-      <!-- Expense start -->
-      <div class="row text-center form-group">
-        <div class="col-md-12">
-          {{Expense results go here}}
-        </div>
-      </div>
-
-      <div class="row text-center form-group">
-        <div class="col-md-12">
-          <label for="itemName">Item Name</label>
-          <input type="text" name="" value="">
-
-          <label for="oneTime">One Time</label>
-          <input type="text" name="" value="">
-
-          <label for="monthly">Monthly</label>
-          <input type="text" name="" value="">
-
-          <button type="button" name="button" class="btn btn-primary">Add Expense Item</button>
-        </div>
-      </div> <!-- Expense end -->
-
-<div class="row">
-      <div class="col-md-6">
-        <div class="header">
-          <p class="title">Revenue</p>
-        </div>
-        <div class="charges">
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="oneTimeRv">One-Time:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.oneTimeRv() }}
-            </div>
-          </div>
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="monthlyRv">Monthly:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.monthlyRv() | currency }}
-            </div>
-          </div>
-
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="totalRv">Total:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.totalRv() | currency }}
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="header">
-          <p class="title">Expenses</p>
-        </div>
-        <div class="charges">
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="oneTimeExp">One-Time:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.oneTimeExp() }}
-            </div>
-          </div>
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="monthlyExp">Monthly:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.monthlyExp() | currency }}
-            </div>
-          </div>
-
-          <div class="form-group clearfix">
-            <div class="col-sm-4">
-              <label for="totalExp">Total:</label>
-            </div>
-            <div class="col-sm-8">
-              {{ calc.meal.totalExp() | currency }}
-            </div>
-          </div>
-        </div>
       </div>
 
     </div>
-
-
-    <div class="row center">
-        <div class="col-md-6">
-          <div class="header">
-            <p class="title">Total</p>
-          </div>
-          <div class="charges">
-            <div class="form-group clearfix">
-              <div class="col-sm-4">
-                <label for="contProfitMonthly">Contribution Profit (Monthly):</label>
-              </div>
-              <div class="col-sm-8">
-                {{ calc.meal.contProfitMonthly() }}
-              </div>
-            </div>
-            <div class="form-group clearfix">
-              <div class="col-sm-4">
-                <label for="contProfitTotal">Contribution Profit (Monthly):</label>
-              </div>
-              <div class="col-sm-8">
-                {{ calc.meal.contProfitTotal() | currency }}
-              </div>
-            </div>
-
-            <div class="form-group clearfix">
-              <div class="col-sm-4">
-                <label for="margin">Contribution Margin:</label>
-              </div>
-              <div class="col-sm-8">
-                {{ calc.meal.margin() | currency }}
-              </div>
-            </div>
-            <div class="form-group clearfix">
-              <div class="col-sm-4">
-                <label for="roiMonths">Capital ROI (Months):</label>
-              </div>
-              <div class="col-sm-8">
-                {{ calc.meal.roiMonths() | currency }}
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-
-    </div> <!--end of controller-->
-  </div>
-
-          <!-- Predicted payment: {{funding.monthlyaftertax | currency: "$ "}} -->
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-  </body>
+</body>
 </html>
