--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div id="app-container" ng-controller="CalcCtrl">
 
-      <!-- List start -->
+      <!-- List inputs-->
+    <div>
       <h2>Revenue Items</h2>
         <span>{{remaining()}} of {{items.length}} remaining</span>
         [ <a href="" ng-click="delete()">Delete</a> ]
@@ -28,6 +29,8 @@
                 placeholder="add monthly amount">
           <input class="btn-primary" type="submit" value="Add Revenue Item">
         </form>
+    </div>
+    <div>
       <h2>Expenses</h2>
         <span>{{remaining()}} of {{items.length}} remaining</span>
         [ <a href="" ng-click="delete()">Delete</a> ]
@@ -47,25 +50,44 @@
                 placeholder="add monthly amount">
           <input class="btn-primary" type="submit" value="Add Expense Item">
         </form>
-      <!-- Revenue and Expense Totals start -->
-      <div>
-        <h2>Revenue Total</h2>
+    </div>
+      <!-- Revenue and Expense Totals -->
+    <div>
+      <h2>Revenue Total</h2>
         <div>
           <span ng-model="revTotalOne">One-Time: {{items | sumOfValue:'once' | currency}}</span><br>
           <span ng-model="revTotalMonthly">Monthly: {{items | sumOfValue:'monthly' | currency}}</span><br>
           <!-- 1st solution works -->
-          <span>Total: {{(items | sumOfValue:'once') + (items | sumOfValue:'monthly') | currency  }}</span>
+          <span>Total: {{(items | sumOfValue:'once') + (items | sumOfValue:'monthly') * 12 | currency  }}</span>
         </div>
-      </div>
-      <div>
-        <h2>Expense Total</h2>
+    </div>
+    <div>
+      <h2>Expense Total</h2>
         <div>
           <span ng-model="revTotalOne">One-Time: {{expenses | sumOfValue:'once' | currency}}</span><br>
           <span ng-model="revTotalMonthly">Monthly: {{expenses | sumOfValue:'monthly' | currency}}</span><br>
           <!-- 1st solution works -->
-          <span>Total: {{(expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') | currency  }}</span>
+          <span>Total: {{(expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') * 12 | currency  }}</span>
         </div>
+    </div>
+
+      <!-- Contribution -->
+    <div>
+      <h2>Contribution</h2>
+      <div>
+        <span>Contribution Profit Monthly: {{(items | sumOfValue:'monthly') - (expenses | sumOfValue:'monthly') | currency}}</span><br>
+
+        <span>Contribution Profit Total: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) | currency}}</span><br>
+
+       <span>Contribution Margin: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) / (items | sumOfValue:'once') + (items | sumOfValue:'monthly')| number : fractionsize}}</span><br>
+        <!-- 1st solution works -->
+        <!-- <span>Capital ROI (Months): {{(expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') | currency  }}</span>  -->
       </div>
+    </div>
+
+
+
+
 
     </div> <!-- CalcCtrl controller end -->
 </body>
