--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       <div>
         <span>Contribution Profit Monthly: {{(items | sumOfValue:'monthly') - (expenses | sumOfValue:'monthly') | currency}}</span><br>
 
-        <span>Contribution Profit Total: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) | currency}}</span><br>
+        <span>Contribution Profit Total: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) | currency }}</span><br>
 
        <span>Contribution Margin: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) / (items | sumOfValue:'once') + (items | sumOfValue:'monthly')| number : fractionsize}}</span><br>
-        <!-- 1st solution works -->
-        <!-- <span>Capital ROI (Months): {{(expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') | currency  }}</span>  -->
+
+        <span>Capital ROI (Months): {{((expenses | sumOfValue:'once') - (items | sumOfValue:'once')) / ((items | sumOfValue:'monthly') - (expenses | sumOfValue:'monthly')) | number:1  }}</span>
       </div>
     </div>
 
