--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
       <div>
         <span>Contribution Profit Monthly: {{(items | sumOfValue:'monthly') - (expenses | sumOfValue:'monthly') | currency}}</span><br>
 
-                <!-- <span>Contribution Profit Total: {{(items | sumOfValue:'once') + (items | sumOfValue:'monthly') * 12 - (expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') * 12) | currency }}</span><br> -->
+
         <span>Contribution Profit Total: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly') * 12) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly') * 12)  | currency }}</span><br>
 
-       <span>Contribution Margin: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) / (items | sumOfValue:'once') + (items | sumOfValue:'monthly')| number : fractionsize}}</span><br>
+       <span>Contribution Margin: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) / ((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) | percentage:0 }} </span><br>
+
+       <!-- <span>Contribution Margin: {{((items | sumOfValue:'once') + (items | sumOfValue:'monthly')) - ((expenses | sumOfValue:'once') + (expenses | sumOfValue:'monthly')) / (items | sumOfValue:'once') + (items | sumOfValue:'monthly')| number: 1}}</span><br> -->
 
         <span>Capital ROI (Months): {{((expenses | sumOfValue:'once') - (items | sumOfValue:'once')) / ((items | sumOfValue:'monthly') - (expenses | sumOfValue:'monthly')) | number:1  }}</span>
       </div>
